Fix spacing

--- a/styles/css/main.css
+++ b/styles/css/main.css
@@ -86,6 +86,10 @@ body {
 
 .attribution {
   padding: 20px;
+  position: fixed;
+  bottom: 0;
+  left: 0;
+  right: 0;
 }
 
 a {
@@ -101,6 +105,7 @@ a:hover {
   --margin-outside-card: 25px;
   --max-width-desc: 80%;
   --max-width-card: calc(100% - var(--margin-outside-card) * 2);
+  --padding-inside-card: 50px 50px 15px 50px;
   max-width: var(--max-width-card);
   border-radius: 15px;
   margin-left: var(--margin-outside-card);
@@ -110,7 +115,7 @@ a:hover {
   box-shadow: 0px 11px 20px 0px var(--card-shadow-color);
 }
 .card-bottom {
-  padding: 35px 25px 10px 25px;
+  padding: var(--padding-inside-card);
   display: flex;
   justify-content: center;
   align-items: center;
@@ -135,6 +140,7 @@ a:hover {
 @media screen and (max-width: 425px) {
   .card {
     --max-width-desc: 100%;
+    --padding-inside-card: 35px 25px 10px 25px;
   }
 }
 
