--- a/styles/scss/base/_basic.scss
+++ b/styles/scss/base/_basic.scss
@@ -17,4 +17,8 @@ body {
 
 .attribution {
   padding: 20px;
+  position: fixed;
+  bottom: 0;
+  left: 0;
+  right: 0;
 }
